# FuelMS

./: .gitignore  .prettierignore  .prettierrc  AI_DEVELOPMENT_PROTOCOL.md  BUSINESS_EXAMPLES.md  ENGINEERING_STANDARDS.md  IMPLEMENTATION_GUIDE.md  PROJECT_PRINCIPLES.md  README.md  commitlint.config.js  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  publish.ps1  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/commands/: accounting.rs  backup.rs  business_partner.rs  cash.rs  fuel_price.rs  fuel_purchase.rs  fuel_sale.rs  inventory.rs  mod.rs  operating_expense.rs  operating_income.rs  organization.rs  person_ledger.rs  reports.rs  tank.rs
apps/desktop/src-tauri/src/db/: connection.rs  legacy_import.rs  migrate.rs  mod.rs
apps/desktop/src-tauri/src/dto/: accounting.rs  backup.rs  business_partner.rs  cash.rs  fuel_price.rs  fuel_purchase.rs  fuel_sale.rs  inventory.rs  mod.rs  operating_expense.rs  operating_income.rs  organization.rs  person_ledger.rs  reports.rs  tank.rs
apps/desktop/src-tauri/src/repositories/: accounting_period_repository.rs  business_partner_repository.rs  cash_repository.rs  fuel_price_repository.rs  fuel_product_repository.rs  fuel_purchase_repository.rs  fuel_sale_repository.rs  inventory_repository.rs  journal_repository.rs  ledger_account_repository.rs  mod.rs  operating_expense_repository.rs  operating_income_repository.rs  organization_repository.rs  person_ledger_repository.rs  (+3 more)
src/: index.css
(+446 files in other folders)
